// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<input type="checkbox" checked=true> => <input type="checkbox" checked=false> 1`] = `
<input
  type="checkbox"
/>
`;

exports[`<input type="checkbox" checked=true> => <input type="checkbox" checked=false> 2`] = `
Object {
  "appendChild": 0,
  "createElement": 1,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 0,
}
`;

exports[`<input type="checkbox" checked=true> => <input type="checkbox"> 1`] = `
<input
  type="checkbox"
/>
`;

exports[`<input type="checkbox" checked=true> => <input type="checkbox"> 2`] = `
Object {
  "appendChild": 0,
  "createElement": 1,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 0,
}
`;

exports[`<input type="checkbox"> => <input type="checkbox" checked=true> 1`] = `
<input
  type="checkbox"
/>
`;

exports[`<input type="checkbox"> => <input type="checkbox" checked=true> 2`] = `
Object {
  "appendChild": 0,
  "createElement": 1,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 0,
}
`;

exports[`<input value="abc"> => <input value="cde"> 1`] = `<input />`;

exports[`<input value="abc"> => <input value="cde"> 2`] = `
Object {
  "appendChild": 0,
  "createElement": 1,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 0,
}
`;

exports[`<input value="abc"> => <input> 1`] = `<input />`;

exports[`<input value="abc"> => <input> 2`] = `
Object {
  "appendChild": 0,
  "createElement": 1,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 0,
}
`;

exports[`<input> => <input type="checkbox"> 1`] = `
<input
  type="checkbox"
/>
`;

exports[`<input> => <input type="checkbox"> 2`] = `
Object {
  "appendChild": 0,
  "createElement": 2,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 1,
}
`;

exports[`<input> => <input value="cde"> 1`] = `<input />`;

exports[`<input> => <input value="cde"> 2`] = `
Object {
  "appendChild": 0,
  "createElement": 1,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 0,
}
`;
